@@ -14,6 +14,7 @@
 - "ethna add-view" コマンドにて、locale 及び client encoding のデフォルト設定が誤っていたバグを修正
 - Ethna_Renderer_Rhaco.php を 1.x 系の最新バージョン 1.6.1 に追随 (thanks: id:akiraneko [ethna-users:1081])
 - 複数ファイルをアップロード(つまり配列を使用)する際、必須チェックが機能しなかったバグを修正(thanks: id:syachi5150)
+- ethna add-app-manager コマンドで生成されるアプリケーションマネージャのクラス名が、[Appid]_Controller#getManagerClassName の設定を反映するように修正。
 
 ** 2.5.0-preview2
 
